--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "dayjs": "^1.11.9",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.0.2",
-    "next": "^14.0.2",
+    "i": "^0.3.7",
+    "next": "^13.4.12",
+    "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-grid-system": "^8.1.9",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
