--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
-    "react-grid-system": "^8.1.9",
     "react-icons": "^4.10.1",
+    "react-indiana-drag-scroll": "^2.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
