--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
-    "autoprefixer": "10.4.14",
     "bootstrap-4-grid": "^3.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
@@ -46,9 +45,11 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
+    "autoprefixer": "^10.4.16",
     "node-sass": "^9.0.0",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "postcss-simple-vars": "^7.0.1",
-    "prisma": "^5.6.0"
+    "prisma": "^5.6.0",
+    "tailwindcss": "^3.3.5"
   }
 }
