--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
+    "tailwind-gradient-mask-image": "^1.1.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwind-variants": "^0.1.18",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
@@ -49,6 +52,8 @@
     "node-sass": "^9.0.0",
     "postcss": "^8.4.31",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.5"
   }
