--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier:write-all": "npx prettier --write .",
     "db:migrate-dev": "npx prisma migrate dev",
     "db:migrate-deploy": "npx prisma migrate deploy",
     "db:seed": "npx prisma db seed"
@@ -21,7 +22,6 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
-    "bootstrap-4-grid": "^3.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "eslint": "8.46.0",
@@ -40,9 +40,6 @@
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
-    "tailwind-gradient-mask-image": "^1.1.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwind-variants": "^0.1.18",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
@@ -55,6 +52,10 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.6.0",
-    "tailwindcss": "^3.3.5"
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.3.5",
+    "tailwind-gradient-mask-image": "^1.1.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwind-variants": "^0.1.18"
   }
 }
