--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "react-dom-confetti": "^0.2.0",
     "react-icons": "^4.10.1",
     "react-indiana-drag-scroll": "^2.2.0",
-    "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
@@ -52,10 +51,10 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.6.0",
-    "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "^3.3.5",
     "tailwind-gradient-mask-image": "^1.1.0",
     "tailwind-merge": "^2.0.0",
-    "tailwind-variants": "^0.1.18"
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwind-variants": "^0.1.18",
+    "tailwindcss": "^3.3.5"
   }
 }
