--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom-confetti": "^0.2.0",
     "react-icons": "^4.10.1",
     "react-indiana-drag-scroll": "^2.2.0",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
@@ -43,6 +44,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.16",
     "node-sass": "^9.0.0",
