--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^4.10.1",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-markdown": "^9.0.1",
