--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.1",
     "@react-md/material-icons": "^5.1.3",
     "@types/node": "20.4.6",
@@ -43,7 +44,8 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
     "typescript": "5.1.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
