--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
+    "@uiw/react-md-editor": "^4.0.3",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
