--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
-    "@uiw/react-md-editor": "^4.0.3",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
+    "draft-js": "^0.11.7",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.0.2",
     "i": "^0.3.7",
@@ -37,11 +37,12 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^4.10.1",
     "react-indiana-drag-scroll": "^2.2.0",
-    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
     "typescript": "5.1.6",
