--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
+    "aws-sdk": "^2.1575.0",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.0.2",
+    "file-type": "^19.0.0",
     "i": "^0.3.7",
     "next": "^13.4.12",
     "next-auth": "^4.24.5",
