--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next/third-parties": "^14.1.4",
     "@prisma/client": "^5.8.1",
     "@react-md/material-icons": "^5.1.3",
     "@types/node": "20.4.6",
