--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@prisma/client": "^5.8.1",
     "@react-md/material-icons": "^5.1.3",
     "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
+    "@types/react": "^18.2.75",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
     "aws-sdk": "^2.1575.0",
