--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^13.4.12",
     "next-auth": "^4.24.5",
     "npm": "^10.2.4",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
