--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.2.75",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "aws-sdk": "^2.1575.0",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
