--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm": "^10.2.4",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
