--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "prettier:write-all": "npx prettier --write .",
-    "db:migrate-dev": "npx prisma migrate dev",
-    "db:migrate-deploy": "npx prisma migrate deploy",
-    "db:seed": "npx prisma db seed"
+    "prisma": "prisma",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:db:seed": "prisma db seed"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -66,7 +68,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^5.8.1",
+    "prisma": "^5.13.0",
     "tailwind-gradient-mask-image": "^1.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwind-scrollbar": "^3.0.5",
