--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@aws-sdk/lib-storage": "^3.578.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/third-parties": "^14.1.4",
     "@prisma/client": "^5.8.1",
@@ -27,7 +29,7 @@
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
     "@uidotdev/usehooks": "^2.4.1",
-    "aws-sdk": "^2.1575.0",
+    "aws-sdk": "^2.1625.0",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
