--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "array-move": "^4.0.0",
     "aws-sdk": "^2.1625.0",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
@@ -48,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-easy-sort": "^1.6.0",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.50.1",
     "react-icons": "^4.10.1",
@@ -55,13 +57,17 @@
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
+    "react-toggle": "^4.1.3",
     "sass": "^1.64.2",
     "typescript": "5.1.6",
     "uuid": "^9.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.0-beta.5",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/array-move": "^2.0.0",
+    "@types/react-toggle": "^4.0.5",
     "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.16",
     "node-sass": "^9.0.0",
