--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "eslint-config-next": "^14.0.2",
     "file-type": "^19.0.0",
     "i": "^0.3.7",
+    "iplocation": "^7.2.0",
     "next": "^13.4.12",
     "next-auth": "^4.24.5",
     "npm": "^10.2.4",
+    "public-ip": "^6.0.2",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
