--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@next/third-parties": "^14.1.4",
     "@prisma/client": "^5.14.0",
     "@react-md/material-icons": "^5.1.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "20.4.6",
     "@types/react": "^18.2.75",
     "@types/react-dom": "18.2.7",
