--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
+    "dayjs-plugin-utc": "^0.1.2",
     "draft-js": "^0.11.7",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.0.2",
