--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "array-move": "^4.0.0",
     "aws-sdk": "^2.1625.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "dayjs-plugin-utc": "^0.1.2",
