--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "array-move": "^4.0.0",
     "aws-sdk": "^2.1625.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "dayjs-plugin-utc": "^0.1.2",
@@ -70,6 +71,7 @@
     "@iconify/react": "^5.0.0-beta.5",
     "@tailwindcss/typography": "^0.5.10",
     "@types/array-move": "^2.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/react-toggle": "^4.0.5",
     "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.16",
